Fix modal not showing correctly in responsible layout
Fix modal not showing correctly in responsible layout

--- a/front-end/src/Account/Login/Login.css
+++ b/front-end/src/Account/Login/Login.css
@@ -2,10 +2,6 @@
     width: 0% !important;
 } */
 
-.login-modal-dialog {
-    width: 25% !important;
-}
-
 .login-modal-header {
     background-color: #2d2d39;
     color: #e8e8e8;
